@@ -90,15 +90,15 @@ public final class DataSourceSwapper {
             }
         }
         try {
-            return (XADataSource) xaDataSourceClass.newInstance();
-        } catch (final InstantiationException | IllegalAccessException ex) {
+            return (XADataSource) xaDataSourceClass.getDeclaredConstructor().newInstance();
+        } catch (final ReflectiveOperationException ex) {
             throw new ShardingSphereException("Failed to instance [%s]", xaDataSourceClassName);
         }
     }
     
     private Map<String, Object> getDatabaseAccessConfiguration(final DataSource dataSource) {
         Map<String, Object> result = new HashMap<>(3, 1);
-        DataSourcePropertyProvider provider = DataSourcePropertyProviderLoader.getProvider(dataSource);
+        DataSourcePropertyProvider provider = DataSourcePropertyProviderFactory.getInstance(dataSource);
         try {
             result.put("url", findGetterMethod(dataSource, provider.getURLPropertyName()).invoke(dataSource));
             result.put("user", findGetterMethod(dataSource, provider.getUsernamePropertyName()).invoke(dataSource));
@@ -106,7 +106,7 @@ public final class DataSourceSwapper {
             return result;
         } catch (final ReflectiveOperationException ex) {
             throw new ShardingSphereException("Cannot swap data source type: `%s`, please provide an implementation from SPI `%s`",
-                dataSource.getClass().getName(), DataSourcePropertyProvider.class.getName());
+                    dataSource.getClass().getName(), DataSourcePropertyProvider.class.getName());
         }
     }
     
